Fix firefox wrapping
On the account change page

--- a/Harvest.Web/ClientApp/src/sass/_regions.scss
+++ b/Harvest.Web/ClientApp/src/sass/_regions.scss
@@ -123,6 +123,7 @@
 }
 .approval-row {
   margin: 16px 0;
+  word-wrap: anywhere;
 }
 
 //project details
